--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.FundFlowDetailActivity"></activity>
+        <activity android:name=".activity.FundFlowDetailActivity" />
+        <activity android:name=".activity.AccountDetailActivity"></activity>
     </application>
 
 </manifest>
