调整布局文字大小

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.FundFlowDetailActivity" />
-        <activity android:name=".activity.AccountDetailActivity"></activity>
+        <activity android:name=".activity.AccountDetailActivity"/>
+        <activity android:name=".activity.AboutAppActivity"/>
     </application>
 
 </manifest>
