--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,6 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     compile 'uk.co.chrisjenx:calligraphy:2.3.0'
     implementation 'com.android.support:cardview-v7:27.0.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+
 }
