--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <activity android:name=".activity.SetBudgetActivity" />
         <activity android:name=".activity.SettingActivity" />
         <activity android:name=".typemanager.TypeManagerActivity" />
-        <activity android:name=".activity.QuestionFeedBackActivity" />
+        <activity android:name=".question.QuestionFeedBackActivity" />
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.UserProfileActivity" />
         <activity android:name=".activity.SplashActivity">
