--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         </activity>
         <activity android:name=".activity.FundFlowDetailActivity" />
         <activity android:name=".activity.AccountDetailActivity" />
-        <activity android:name=".activity.AboutAppActivity" />
+        <activity android:name=".other.about.AboutAppActivity" />
         <activity android:name=".addtype.AddEditTypeActivity"></activity>
     </application>
 
