remove unused resources and add transfer module

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
         <activity android:name=".other.mine.MineActivity" />
         <activity android:name=".account.list.AccountListActivity" />
         <activity android:name=".account.add.AddAccountActivity" />
-        <activity android:name=".account.add.icon.ChooseAccountIconActivity"/>
+        <activity android:name=".account.add.icon.ChooseAccountIconActivity" />
+        <activity android:name=".account.transfer.TransferAccountsActivity"></activity>
     </application>
 
 </manifest>
